# b-muniai-preview

./: .env.example  .gitignore  CLAUDE.md  Makefile  Notes.md  README.md  docker-compose.yml  secrets.txt  stack.ps1
services/backend/: .env.example  Dockerfile  pyproject.toml
services/backend/muniai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/backend/src/: main.py
services/backend/src/application/ports/: audit_publisher_port.py  challenge_port.py  crm_lookup_port.py  hospital_repository.py  log_port.py  mediciner_repository.py  notification_port.py  otp_sender_port.py  slot_repository.py  user_repository.py
services/backend/src/application/use_cases/: activate_user.py  approve_user.py  cancel_invitation.py  create_hospital.py  create_mediciner.py  create_slot.py  create_user.py  deactivate_user.py  delete_slot.py  disable_user.py  enable_user.py  find_user_by_email.py  get_hospital.py  get_mediciner.py  list_hospitals.py  list_invite_history.py  list_medicineres.py  list_slots.py  list_users.py  lookup_crm.py  update_hospital.py  update_mediciner.py  update_slot.py  verify_otp.py
services/backend/src/domain/entities/: hospital.py  mediciner.py  slot.py  user.py
services/backend/src/domain/validation/: tax_id.py
services/backend/src/infrastructure/cache/: invite_token_cache.py  noop_notification_adapter.py  noop_otp_adapter.py  (+1 more)
services/backend/tests/unit/: test_activate_user.py  test_create_user.py
services/bff/: .env.example  Dockerfile  pyproject.toml
services/bff/resources/: authorized_psas.yaml
services/bff/src/: main.py
(+85 files in other folders)
