[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "muniai-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "flask>=3.0",
  "flasgger>=0.9.7",
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
  "redis>=5.0",
  "pika>=1.3",
  "pymongo>=4.8",
  "prometheus-flask-exporter>=0.23",
  "pyjwt[crypto]>=2.9",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "testcontainers[postgres,redis,rabbitmq]>=4.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
