[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "muniai-bff"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "flask>=3.0",
  "flasgger>=0.9.7",
  "requests>=2.32",
  "pyjwt[crypto]>=2.9",
  "redis>=5.0",
  "prometheus-flask-exporter>=0.23",
  "python-dotenv>=1.0",
  "authlib>=1.3",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
